croaring-sys/CRoaring/roaring.h


typedef struct roaring_array_s {
    int32_t size;
    int32_t allocation_size;
    ROARING_CONTAINER_T **containers;  
    uint16_t *keys;
    uint8_t *typecodes;
    uint8_t flags;
} roaring_array_t;
typedef bool (*roaring_iterator)(uint32_t value, void *param);
typedef bool (*roaring_iterator64)(uint64_t value, void *param);
using api::roaring_iterator;
using api::roaring_iterator64;
using api::roaring_iterator;
using api::roaring_iterator64;
using api::roaring_iterator;
using api::roaring_iterator64;
typedef struct roaring_bitmap_s {
    roaring_array_t high_low_container;
} roaring_bitmap_t;
void roaring_bitmap_free(const roaring_bitmap_t *r);
bool roaring_bitmap_remove_run_compression(roaring_bitmap_t *r);
bool roaring_bitmap_run_optimize(roaring_bitmap_t *r);
size_t roaring_bitmap_shrink_to_fit(roaring_bitmap_t *r);
size_t roaring_bitmap_serialize(const roaring_bitmap_t *r, char *buf);
roaring_bitmap_t *roaring_bitmap_deserialize(const void *buf);
roaring_bitmap_t *roaring_bitmap_deserialize_safe(const void *buf,
                                                  size_t maxbytes);
size_t roaring_bitmap_size_in_bytes(const roaring_bitmap_t *r);
roaring_bitmap_t *roaring_bitmap_portable_deserialize(const char *buf);
roaring_bitmap_t *roaring_bitmap_portable_deserialize_safe(const char *buf,
                                                           size_t maxbytes);
roaring_bitmap_t *roaring_bitmap_portable_deserialize_frozen(const char *buf);
size_t roaring_bitmap_portable_deserialize_size(const char *buf,
                                                size_t maxbytes);
size_t roaring_bitmap_portable_size_in_bytes(const roaring_bitmap_t *r);
size_t roaring_bitmap_portable_serialize(const roaring_bitmap_t *r, char *buf);
size_t roaring_bitmap_frozen_size_in_bytes(const roaring_bitmap_t *r);
void roaring_bitmap_frozen_serialize(const roaring_bitmap_t *r, char *buf);
const roaring_bitmap_t *roaring_bitmap_frozen_view(const char *buf,
                                                   size_t length);
bool roaring_iterate(const roaring_bitmap_t *r, roaring_iterator iterator,
                     void *ptr);
bool roaring_iterate64(const roaring_bitmap_t *r, roaring_iterator64 iterator,
                       uint64_t high_bits, void *ptr);
bool roaring_bitmap_equals(const roaring_bitmap_t *r1,
                           const roaring_bitmap_t *r2);
bool roaring_bitmap_is_subset(const roaring_bitmap_t *r1,
                              const roaring_bitmap_t *r2);
bool roaring_bitmap_is_strict_subset(const roaring_bitmap_t *r1,
                                     const roaring_bitmap_t *r2);
bool roaring_bitmap_internal_validate(const roaring_bitmap_t *r,
                                      const char **reason);